@@ -1,4 +1,5 @@
 version 0.8.0 - currently working on
+- [#2801] Email address in the list view is not secured against spam
 - [#2382] Fix: PHP error when loading oelib template helper due to camel-case filename
 - [#2802] Change: Added a comma in list template between surname and first name (looks better)
 - [#2523] Change: Make use of the oelib AutoLoader consistent
